--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -8,8 +8,8 @@
   line-height: 20px;
   font-size: 16px;
   font-weight: 400;
-  color: @basic_white;
-  background-color: @basic_green;
+  color: @basic-white;
+  background-color: @basic-green;
   margin: 0 auto;
   padding: 10px 0 10px 0;
   border: none;
@@ -17,11 +17,11 @@
 
   @media (min-width: @desktop) {
     &:hover {
-      background-color: @basic_green-2;
+      background-color: @basic-green-2;
     }
 
     &:active {
-      color: fade(@basic_white, 30%);
+      color: fade(@basic-white, 30%);
     }
   }
 }
