--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -25,7 +25,7 @@
     position: absolute;
     top: 181px;
     left: 50%;
-    background-color: @basic_white;
+    background-color: @basic-white;
     padding: 62px 89px 51px 76px;
     margin: 0;
     margin-left: -550px;
@@ -50,7 +50,7 @@
   font-family: "Arial", "Helvetica", sans-serif;
   font-size: 14px;
   line-height: 20px;
-  color: @special_dark-grey;
+  color: @special-dark-grey;
   margin: 0;
   min-width: 140px;
 
