--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -21,7 +21,7 @@
 
   @media (min-width: @desktop-content) {
     &:hover path {
-      fill: @basic_green;
+      fill: @basic-green;
     }
 
     &:active {
@@ -34,6 +34,6 @@
   font-family: "Arial", "Helvetica", sans-serif;
   font-size: 16px;
   line-height: 18px;
-  color: @special_dark-grey;
+  color: @special-dark-grey;
   margin: 0;
 }
