--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -78,7 +78,7 @@
     left: 112px;
     font-size: 280px;
     line-height: 280px;
-    color: @basic_grey;
+    color: @basic-grey;
     z-index: -1;
     margin: 0;
   }
@@ -87,7 +87,7 @@
 .information__background-icon {
   width: 60px;
   height: 60px;
-  background-color: @basic_green;
+  background-color: @basic-green;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -102,7 +102,7 @@
   font-family: "Arial", "Helvetica", sans-serif;
   font-size: 14px;
   line-height: 18px;
-  color: @special_dark-grey;
+  color: @special-dark-grey;
   margin: 0;
   max-width: 200px;
 
