--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -6,7 +6,7 @@
     &--open {
       position: absolute;
       width: 100%;
-      background-color: @basic_white;
+      background-color: @basic-white;
     }
 
     &--close {
@@ -39,7 +39,7 @@
 
 .main-nav__item {
   width: 100%;
-  border-top: 1px solid @special_grey-4;
+  border-top: 1px solid @special-grey-4;
 
   @media (min-width: @tablet) {
     width: min-content;
@@ -55,7 +55,7 @@
   font-weight: 500;
   text-transform: uppercase;
   text-decoration: none;
-  color: @basic_black;
+  color: @basic-black;
   margin: 0 auto;
   padding: 22px 0 24px 0;
   white-space: nowrap;
@@ -84,7 +84,7 @@
       height: 2px;
       left: 0;
       bottom: -6px;
-      background-color: @basic_green;
+      background-color: @basic-green;
     }
   }
 
@@ -96,12 +96,12 @@
 
 .main-nav__index-link {
   @media (min-width: @desktop) {
-    color: @basic_white;
+    color: @basic-white;
   }
 
   &--active::after {
     @media (min-width: @desktop) {
-      background-color: @basic_white;
+      background-color: @basic-white;
     }
   }
 }
