--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -6,8 +6,8 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
-  border-top: 1px solid @special_grey-4;
-  border-bottom: 1px solid @special_grey-4;
+  border-top: 1px solid @special-grey-4;
+  border-bottom: 1px solid @special-grey-4;
   margin: 0 auto;
   padding: @mobile-padding;
   padding-top: 27px;
