--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -3,19 +3,19 @@
   gap: 14px;
   min-height: 117px;
   box-sizing: border-box;
-  border-bottom: 1px solid @special_grey-5;
-  border-top: 1px solid @special_grey-4;
+  border-bottom: 1px solid @special-grey-5;
+  border-top: 1px solid @special-grey-4;
   margin: 0;
   padding-top: 13px;
   padding-bottom: 19px;
 
   @media (min-width: @tablet) {
     padding: 27px 38px;
-    border: 1px solid @special_grey;
+    border: 1px solid @special-grey;
     border-bottom: none;
 
     &:last-child {
-      border-bottom: 1px solid @special_grey;
+      border-bottom: 1px solid @special-grey;
     }
   }
 
@@ -24,12 +24,12 @@
     grid-template-columns: 325px 326px 245px;
     gap: 0;
     border: none;
-    border-bottom: 1px solid @special_grey-5;
+    border-bottom: 1px solid @special-grey-5;
     padding: 0;
     align-items: center;
 
     &:first-child {
-      border-top: 1px solid @special_grey-5;
+      border-top: 1px solid @special-grey-5;
     }
   }
 }
