--- a/source/less/blocks/catalog-further.less
+++ b/source/less/blocks/catalog-further.less
@@ -34,7 +34,7 @@
   }
 
   @media (min-width: @desktop) {
-    background-image: linear-gradient(to right, @basic_white 0, @basic_white 413px, transparent 413px, transparent 100%);
+    background-image: linear-gradient(to right, @basic-white 0, @basic-white 413px, transparent 413px, transparent 100%);
   }
 }
 
