--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -77,7 +77,7 @@
   font-family: "Arial", "Helvetica", sans-serif;
   font-size: 16px;
   line-height: 20px;
-  color: @basic_white;
+  color: @basic-white;
   text-align: center;
   width: 165px;
   margin: 48px auto 0 auto;
