--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -55,7 +55,7 @@
   padding-top: 24px;
   padding-bottom: 22px;
   box-sizing: border-box;
-  background-color: @basic_grey;
+  background-color: @basic-grey;
   margin: 0 auto;
 
   @media (min-width: @tablet) {
@@ -77,7 +77,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: @basic_green;
+  background-color: @basic-green;
 
   @media (min-width: @tablet) {
     position: absolute;
@@ -145,11 +145,11 @@
   font-family: "Arial", "Helvetica", sans-serif;
   font-size: 14px;
   line-height: 18px;
-  color: @special_dark-grey;
+  color: @special-dark-grey;
   margin: 0;
   margin-top: 22px;
   padding-bottom: 23px;
-  border-bottom: 1px solid @special_grey-6;
+  border-bottom: 1px solid @special-grey-6;
 
   @media (min-width: @tablet) {
     font-size: 16px;
@@ -170,7 +170,7 @@
   line-height: 16px;
   text-transform: uppercase;
   text-decoration: none;
-  color: @basic_black;
+  color: @basic-black;
   padding-top: 15px;
   margin: 0;
   position: relative;
