--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -36,7 +36,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: @special_green-1;
+  background-color: @special-green-1;
   position: absolute;
   top: 0;
   z-index: -1;
@@ -52,7 +52,7 @@
 
   @media (min-width: @desktop) {
     background-image: url("../img/promo/promo-background-desktop.png");
-    background-color: @special_green-1;
+    background-color: @special-green-1;
     background-position: left;
     display: block;
     height: 100%;
@@ -74,14 +74,14 @@
   font-size: 36px;
   line-height: 36px;
   text-align: center;
-  color: @basic_white;
+  color: @basic-white;
   margin: 0;
   padding-top: 27px;
 
   @media (min-width: @tablet) {
     font-size: 60px;
     line-height: 60px;
-    color: @basic_black;
+    color: @basic-black;
     text-align: left;
     z-index: 1;
   }
@@ -96,14 +96,14 @@
   line-height: 14px;
   text-transform: uppercase;
   text-align: center;
-  color: @basic_white;
+  color: @basic-white;
   margin: 0;
   margin-top: 25px;
 
   @media (min-width: @tablet) {
     font-size: 20px;
     line-height: 20px;
-    color: @basic_black;
+    color: @basic-black;
     text-align: left;
     margin-top: 41px;
     z-index: 1;
