--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -11,8 +11,8 @@
   justify-content: center;
   list-style: none;
   box-sizing: border-box;
-  border-bottom: 1px solid @special_grey-6;
-  border-top: 1px solid @special_grey-6;
+  border-bottom: 1px solid @special-grey-6;
+  border-top: 1px solid @special-grey-6;
   padding: 6px 0 7px 0;
   margin: 0;
 
@@ -28,7 +28,7 @@
 
   @media (min-width: @desktop-content) {
     &:hover path {
-      fill: @basic_green;
+      fill: @basic-green;
     }
 
     &:active {
