--- a/source/less/common/mixins.less
+++ b/source/less/common/mixins.less
@@ -5,7 +5,7 @@
   margin-left: 0;
   padding: @mobile-padding;
   width: min-content;
-  background-color: @basic_white;
+  background-color: @basic-white;
   white-space: nowrap;
   box-sizing: border-box;
 
@@ -36,7 +36,7 @@
     width: 100%;
     height: 2px;
     top: 16px;
-    background-color: @basic_green;
+    background-color: @basic-green;
     z-index: -1;
 
     @media (min-width: @tablet) {
