--- a/source/less/common/variables.less
+++ b/source/less/common/variables.less
@@ -9,21 +9,21 @@
 @desktop-content: 1220px;
 @desktop: 1280px;
 // colors
-@basic_white: #FFFFFF;
-@basic_black: #000000;
-@basic_green: #68B738;
-@basic_grey: #F2F2F2;
-@basic_green-2: #5EAA2F;
-@special_grey: #CDCDCD;
-@special_grey-2: #EBEBEB;
-@special_grey-4: #E6E6E6;
-@special_grey-3: #666666;
-@special_grey-5: #EAEAEA;
-@special_grey-6: #D9D9D9;
-@special_grey-7: #E7E7E7;
-@special_grey-8: #C4C4C4;
-@special_grey-9: #BABABA;
-@special_dark-grey: #444444;
-@special_dark-grey-2: #222222;
-@status_error: #FF8282;
-@special_green-1: rgba(104, 183, 56, 1);
+@basic-white: #FFFFFF;
+@basic-black: #000000;
+@basic-green: #68B738;
+@basic-grey: #F2F2F2;
+@basic-green-2: #5EAA2F;
+@special-grey: #CDCDCD;
+@special-grey-2: #EBEBEB;
+@special-grey-4: #E6E6E6;
+@special-grey-3: #666666;
+@special-grey-5: #EAEAEA;
+@special-grey-6: #D9D9D9;
+@special-grey-7: #E7E7E7;
+@special-grey-8: #C4C4C4;
+@special-grey-9: #BABABA;
+@special-dark-grey: #444444;
+@special-dark-grey-2: #222222;
+@status-error: #FF8282;
+@special-green-1: rgba(104, 183, 56, 1);
