--- a/source/less/common/mixins.less
+++ b/source/less/common/mixins.less
@@ -19,7 +19,8 @@
 
   @media (min-width: @desktop) {
     margin: 0 auto;
-    width: @desktop;
+    width: 100%;
+    max-width: @desktop;
     padding: 0;
     padding-left: 40px;
     background-color: transparent;
