добавил .webp для promo, иконки social в спрайт

--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -27,11 +27,11 @@
   padding: 17px;
 
   @media (min-width: @desktop-content) {
-    &:hover path {
+    &:hover .social-icon {
       fill: @basic-green;
     }
 
-    &:active {
+    &:active .social-icon {
       opacity: 0.3;
     }
   }
