--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -6,12 +6,13 @@
   @media (min-width: @tablet) {
     background-color: transparent;
     background-image: linear-gradient(to top, @special-grey-5 0, @special-grey-5 462px, transparent 462px, transparent 100%);
+    margin-top: 50px;
   }
 }
 
 .example__wrapper {
   padding-top: 27px;
-  padding-bottom: 30px;
+  padding-bottom: 36px;
   margin: 0 auto;
 
   @media (min-width: @tablet) {
@@ -59,7 +60,7 @@
   @media (min-width: @tablet) {
     font-size: 16px;
     line-height: 24px;
-    margin-top: 61px;
+    margin-top: 62px;
   }
 
   @media (min-width: @desktop) {
@@ -72,7 +73,7 @@
     display: flex;
     gap: 167px;
     justify-content: center;
-    align-items: baseline;
+    align-items: center;
     margin-top: 54px;
   }
 
@@ -114,7 +115,8 @@
   border-radius: 3px;
   border: 1px solid @special-grey;
   margin: 0;
-  padding: 15px 0 18px 0;
+  padding: 14px 0 18px 0;
+  text-transform: uppercase;
 
   @media (min-width: @tablet) {
     font-size: 30px;
@@ -133,6 +135,7 @@
   background-color: @special-grey-5;
 
   @media (min-width: @tablet) {
+    width: 142px;
     font-size: 14px;
     line-height: 14px;
     background-color: @basic-white;
@@ -144,19 +147,21 @@
 }
 
 .example__result {
+  font-size: 14px;
   text-align: center;
   margin: 0;
-  margin-top: 27px;
+  margin-top: 19px;
   text-transform: uppercase;
 
   @media (min-width: @tablet) {
     font-size: 20px;
-    line-height: 20px;
+    line-height: 28px;
     text-align: end;
-    margin-top: 0;
+    margin-top: -20px;
   }
 
   @media (min-width: @desktop) {
+    line-height: 20px;
     margin-top: 50px;
     text-align: start;
   }
@@ -164,7 +169,11 @@
 
 .example__slider {
   margin: 0;
-  margin-top: 42px;
+  margin-top: 35px;
+
+  @media (min-width: @tablet) {
+    margin-top: 70px;
+  }
 
   @media (min-width: @desktop) {
     margin-bottom: 0;
@@ -206,11 +215,11 @@
 .example__slider-buttons {
   width: min-content;
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: center;
-  gap: 20px;
+  gap: 22px;
   margin: 0 auto;
-  margin-top: 23px;
+  margin-top: 15px;
 }
 
 .example__slider-toggle {
@@ -251,12 +260,12 @@
 
   @media (min-width: @tablet) {
     width: auto;
-    height: 536px;
+    height: 515px;
   }
 
   &--before {
     @media (min-width: @tablet) {
-      width: 350px;
+      width: 333px;
       object-fit: cover;
       object-position: left;
       margin-right: 0;
@@ -265,7 +274,7 @@
 
   &--after {
     @media (min-width: @tablet) {
-      width: 305px;
+      width: 295px;
       object-fit: cover;
       object-position: right;
       margin-left: 0;
