--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -30,10 +30,12 @@
     flex-direction: row;
     justify-content: space-between;
     width: 440px;
+    margin-top: 5px;
   }
 
   @media (min-width: @desktop) {
     width: 478px;
+    margin: 0;
   }
 }
 
@@ -83,7 +85,7 @@
       width: 100%;
       height: 2px;
       left: 0;
-      bottom: -6px;
+      bottom: -10px;
       background-color: @basic-green;
     }
   }
