--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -34,13 +34,13 @@
 .programs__list {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 21px;
   list-style: none;
   margin: 0;
   padding: 0;
 
   @media (min-width: @tablet) {
-    gap: 30px;
+    gap: 35px;
   }
 
   @media (min-width: @desktop) {
@@ -52,7 +52,7 @@
 .programs__item {
   width: 100%;
   padding: @mobile-padding;
-  padding-top: 24px;
+  padding-top: 21px;
   padding-bottom: 22px;
   box-sizing: border-box;
   background-color: @basic-grey;
@@ -104,6 +104,7 @@
     @media (min-width: @tablet) {
       width: 140px;
       height: 194px;
+      top: -10px;
     }
 
     @media (min-width: @desktop) {
@@ -134,10 +135,12 @@
   line-height: 37px;
   text-transform: uppercase;
   margin: 0;
+  margin-top: 9px;
 
   @media (min-width: @tablet) {
     font-size: 36px;
     line-height: 36px;
+    margin: 0;
   }
 }
 
@@ -147,7 +150,7 @@
   line-height: 18px;
   color: @special-dark-grey;
   margin: 0;
-  margin-top: 22px;
+  margin-top: 24px;
   padding-bottom: 23px;
   border-bottom: 1px solid @special-grey-6;
 
@@ -171,7 +174,7 @@
   text-transform: uppercase;
   text-decoration: none;
   color: @basic-black;
-  padding-top: 15px;
+  padding-top: 18px;
   margin: 0;
   position: relative;
   cursor: pointer;
@@ -180,7 +183,7 @@
     font-size: 20px;
     line-height: 30px;
     padding: 0;
-    margin-top: 52px;
+    margin-top: 50px;
   }
 
   @media (min-width: @desktop) {
@@ -196,6 +199,7 @@
     position: absolute;
     margin-left: 15px;
     top: 50%;
+    margin-top: 3px;
     width: 32px;
     height: 12px;
     background-image: url("../img/programs/icon_programs_arrow.svg");
@@ -204,6 +208,7 @@
 
     @media (min-width: @tablet) {
       margin-top: -4px;
+      margin-left: 25px;
     }
   }
 
