--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -34,7 +34,7 @@
   width: 100%;
   background-image: url("../img/promo/promo-background-mobile.png");
   background-size: cover;
-  background-position: center;
+  background-position: 65%;
   background-repeat: no-repeat;
   background-color: @special-green-1;
   position: absolute;
@@ -84,6 +84,9 @@
     color: @basic-black;
     text-align: left;
     z-index: 1;
+    padding: 0;
+    margin-top: 65px;
+    margin-left: 87px;
   }
 
   @media (min-width: @desktop) {
@@ -106,6 +109,7 @@
     color: @basic-black;
     text-align: left;
     margin-top: 41px;
+    margin-left: 87px;
     z-index: 1;
   }
 
@@ -123,7 +127,7 @@
   @media (min-width: @tablet) {
     width: 709px;
     height: 609px;
-    margin-top: -83px;
+    margin-top: -78px;
   }
 
   @media (min-width: @desktop) {
@@ -145,7 +149,11 @@
   margin-top: 3px;
 
   @media (min-width: @tablet) {
-    margin: 47px auto 0 0;
+    width: 244px;
+    line-height: 20px;
+    font-size: 20px;
+    margin: 47px auto 0 87px;
+    padding: 16px 0 16px 0;
     z-index: 1;
   }
 }
