pixelperfect главная desktop

--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -8,6 +8,10 @@
     background-image: linear-gradient(to top, @special-grey-5 0, @special-grey-5 462px, transparent 462px, transparent 100%);
     margin-top: 50px;
   }
+
+  @media (min-width: @desktop) {
+    margin-top: 33px;
+  }
 }
 
 .example__wrapper {
@@ -79,6 +83,7 @@
 
   @media (min-width: @desktop) {
     display: block;
+    margin-top: 65px;
   }
 }
 
@@ -176,8 +181,7 @@
   }
 
   @media (min-width: @desktop) {
-    margin-bottom: 0;
-    margin-top: auto;
+    margin-top: -55px;
   }
 }
 
@@ -220,6 +224,10 @@
   gap: 22px;
   margin: 0 auto;
   margin-top: 15px;
+
+  @media (min-width: @desktop) {
+    margin-top: 34px;
+  }
 }
 
 .example__slider-toggle {
