--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -10,6 +10,7 @@
   padding-top: 20px;
   padding-bottom: 25px;
   border-bottom: 1px solid @special-grey-2;
+  min-height: 190px;
 
   @media (min-width: @tablet) {
     border: none;
