--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -91,6 +91,7 @@
 
   @media (min-width: @desktop) {
     margin-left: 0;
+    margin-top: 116px;
   }
 }
 
@@ -155,6 +156,11 @@
     margin: 47px auto 0 87px;
     padding: 16px 0 16px 0;
     z-index: 1;
+  }
+
+  @media (min-width: @desktop) {
+    margin-top: 50px;
+    margin-left: 0;
   }
 }
 
