--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -110,6 +110,7 @@
     @media (min-width: @desktop) {
       width: 70px;
       height: 97px;
+      top: 40px;
     }
   }
 
@@ -209,6 +210,11 @@
     @media (min-width: @tablet) {
       margin-top: -4px;
       margin-left: 25px;
+    }
+
+    @media (min-width: @desktop) {
+      margin-top: -7px;
+      margin-left: 28px;
     }
   }
 
