--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -5,7 +5,7 @@
   background-size: auto 100%;
   background-repeat: no-repeat;
   margin: 0 auto;
-  margin-top: 36px;
+  margin-top: 35px;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/present/present-mobile@2x.jpg");
@@ -45,10 +45,11 @@
   @media (min-width: @tablet) {
     display: flex;
     gap: 265px;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     padding: 57px 0 61px 0;
     margin: 0 auto;
+    margin-left: 80px;
   }
 
   @media (min-width: @desktop) {
