--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -13,6 +13,6 @@
   font-size: 16px;
   line-height: 18px;
   margin: 0 auto;
-  outline: 4px solid red;
-  outline-offset: -4px;
+  // outline: 10px solid black;
+  // outline-offset: -10px;
 }
