pixelperfect form desktop

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -104,6 +104,8 @@
       grid-template-columns: 1fr 1fr;
       gap: 80px;
       align-items: baseline;
+      margin-top: 55px;
+      margin-bottom: 68px;
     }
   }
 
@@ -124,6 +126,7 @@
       width: @desktop-content;
       gap: 80px;
       grid-template-columns: 1fr 1fr 1fr 1fr;
+      margin-bottom: 72px;
     }
   }
 }
@@ -165,7 +168,7 @@
     gap: 80px;
     width: @desktop-content;
     margin: 0 auto;
-    margin-bottom: 65px;
+    margin-bottom: 70px;
   }
 }
 
@@ -336,6 +339,8 @@
   .title-with-line;
 
   @media (min-width: @desktop) {
+    padding-left: 31px;
+
     &--contacts {
       background-image: linear-gradient(to right, @basic-white 0, @basic-white 593px, transparent 593px, transparent 100%);
     }
