--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -22,6 +22,10 @@
     border: none;
     padding: 0;
   }
+
+  @media (min-width: @tablet) {
+    margin-left: 27px;
+  }
 }
 
 .social__link {
@@ -44,6 +48,6 @@
 
 .social__icon {
   @media (min-width: @tablet) {
-    transform: scale(1.5);
+    transform: scale(1.4);
   }
 }
