--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -18,6 +18,10 @@
     @media (min-width: @tablet) {
       margin-top: 76px;
     }
+
+    @media (min-width: @desktop) {
+      margin-top: 84px;
+    }
   }
 }
 
