--- a/source/less/blocks/catalog-further.less
+++ b/source/less/blocks/catalog-further.less
@@ -34,6 +34,8 @@
   }
 
   @media (min-width: @desktop) {
+    margin-top: 79px;
+    padding-left: 30px;
     background-image: linear-gradient(to right, @basic-white 0, @basic-white 413px, transparent 413px, transparent 100%);
   }
 }
