--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -9,6 +9,10 @@
     @media (min-width: @tablet) {
       margin-top: 77px;
     }
+
+    @media (min-width: @desktop) {
+      margin-top: 82px;
+    }
   }
 
   &--form {
