--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -73,10 +73,7 @@
   &--radio {
     border-top: 1px solid @special-grey-6;
     border-bottom: 1px solid @special-grey-6;
-    padding-top: 27px;
-    padding-left: 65px;
-    padding-bottom: 25px;
-    padding-right: 15px;
+    padding: 27px 15px 25px 65px;
 
     @media (min-width: @tablet) {
       margin: @tablet-form-padding;
