--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -64,23 +64,34 @@
   }
 
   &--small {
+    &:nth-child(2) {
+      margin-top: 28px;
+    }
+
     @media (min-width: @tablet) {
       width: 161px;
       height: 171px;
+      margin-top: 35px;
     }
   }
 
   &--medium {
+    margin-top: 25px;
+
     @media (min-width: @tablet) {
       width: 163px;
       height: 174px;
+      margin-top: 33px;
     }
   }
 
   &--large {
+    margin-top: 9px;
+
     @media (min-width: @tablet) {
       width: 168px;
       height: auto;
+      margin-top: 10px;
     }
 
     @media (min-width: @desktop) {
