--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -21,10 +21,12 @@
   @media (min-width: @tablet) {
     border: none;
     padding: 0;
+    gap: 16px;
   }
 
   @media (min-width: @tablet) {
     margin-left: 27px;
+    margin-top: -10px;
   }
 }
 
