--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,6 +1,6 @@
 .copyright {
   width: 100%;
-  padding: 20px 0 20px 0;
+  padding: 22px 0 20px 0;
 
   @media (min-width: @tablet) {
     width: auto;
@@ -17,6 +17,7 @@
   @media (min-width: @tablet) {
     justify-content: flex-end;
     gap: 22px;
+    margin-top: -10px;
   }
 
   @media (min-width: @desktop-content) {
