--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -6,7 +6,7 @@
   @media (min-width: @tablet) {
     background-color: transparent;
     background-image: linear-gradient(to top, @special-grey-5 0, @special-grey-5 462px, transparent 462px, transparent 100%);
-    margin-top: 50px;
+    margin-top: 49px;
   }
 
   @media (min-width: @desktop) {
@@ -64,7 +64,7 @@
   @media (min-width: @tablet) {
     font-size: 16px;
     line-height: 24px;
-    margin-top: 62px;
+    margin-top: 64px;
   }
 
   @media (min-width: @desktop) {
@@ -138,6 +138,8 @@
   color: @special-dark-grey;
   margin: -10px auto 0 auto;
   background-color: @special-grey-5;
+  padding: 0 5px;
+  box-sizing: border-box;
 
   @media (min-width: @tablet) {
     width: 142px;
@@ -148,6 +150,18 @@
 
   @media (min-width: @desktop) {
     background-color: @special-grey-5;
+  }
+
+  &--weight {
+    @media (min-width: @tablet) {
+      width: 114px;
+    }
+  }
+}
+
+.example__specification-name br {
+  @media (min-width: @tablet) {
+    display: none;
   }
 }
 
@@ -162,7 +176,7 @@
     font-size: 20px;
     line-height: 28px;
     text-align: end;
-    margin-top: -20px;
+    margin-top: -8px;
   }
 
   @media (min-width: @desktop) {
@@ -177,7 +191,7 @@
   margin-top: 35px;
 
   @media (min-width: @tablet) {
-    margin-top: 70px;
+    margin-top: 77px;
   }
 
   @media (min-width: @desktop) {
@@ -221,9 +235,13 @@
   display: flex;
   align-items: baseline;
   justify-content: center;
-  gap: 22px;
+  gap: 19px;
   margin: 0 auto;
-  margin-top: 15px;
+  margin-top: 30px;
+
+  @media (min-width: @tablet) {
+    margin-top: 21px;
+  }
 
   @media (min-width: @desktop) {
     margin-top: 34px;
