pixelperfect всех страниц

--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -113,8 +113,8 @@
   }
 }
 
-.information__text br {
-  @media (max-width: @mobile-max) {
-    display: none;
-  }
-}
+// .information__text br {
+//   @media (max-width: @mobile-max) {
+//     display: none;
+//   }
+// }
