--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -35,7 +35,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  gap: 18px;
+  gap: 20px;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -81,6 +81,7 @@
   height: 50px;
   border-radius: 50%;
   background-color: @basic-green;
+  position: relative;
 
   @media (min-width: @tablet) {
     position: absolute;
@@ -103,6 +104,7 @@
   &--slim {
     width: 36px;
     height: 50px;
+    top: -2px;
 
     @media (min-width: @tablet) {
       width: 140px;
@@ -155,7 +157,7 @@
   color: @special-dark-grey;
   margin: 0;
   margin-top: 24px;
-  padding-bottom: 23px;
+  padding-bottom: 22px;
   border-bottom: 1px solid @special-grey-6;
 
   @media (min-width: @tablet) {
