--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -65,11 +65,13 @@
     font-size: 16px;
     line-height: 24px;
     margin-top: 64px;
+    margin-right: 10px;
   }
 
   @media (min-width: @desktop) {
     margin-top: 146px;
     width: 436px;
+    margin-right: 0;
   }
 }
 
