--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -355,15 +355,15 @@
     padding-left: 30px;
 
     &--contacts {
-      background-image: linear-gradient(to right, @basic-white 0, @basic-white 593px, transparent 593px, transparent 100%);
+      background-image: linear-gradient(to right, @basic-white 0, @basic-white 585px, transparent 585px, transparent 100%);
     }
 
     &--message {
-      background-image: linear-gradient(to right, @basic-white 0, @basic-white 259px, transparent 259px, transparent 100%);
+      background-image: linear-gradient(to right, @basic-white 0, @basic-white 255px, transparent 255px, transparent 100%);
     }
 
     &--optional {
-      background-image: linear-gradient(to right, @basic-white 0, @basic-white 292px, transparent 292px, transparent 100%);
+      background-image: linear-gradient(to right, @basic-white 0, @basic-white 285px, transparent 285px, transparent 100%);
     }
   }
 
@@ -426,6 +426,7 @@
 
     @media (min-width: @tablet) {
       top: 18px;
+      right: 18px;
     }
   }
 
@@ -433,9 +434,10 @@
     top: 12px;
     right: 13px;
     fill: @special-dark-grey-2;
-  }
 
-  @media (min-width: @tablet) {
-    top: 17px;
+    @media (min-width: @tablet) {
+      top: 17px;
+      right: 16px;
+    }
   }
 }
