--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -78,7 +78,7 @@
 .example__specification-result-wrapper {
   @media (min-width: @tablet) {
     display: flex;
-    gap: 162px;
+    gap: 167px;
     justify-content: center;
     align-items: center;
     margin-top: 54px;
@@ -222,6 +222,10 @@
 
   @media (min-width: @tablet) {
     display: block;
+    width: 354px;
+  }
+
+  @media (min-width: @desktop) {
     width: 285px;
   }
 }
@@ -247,14 +251,14 @@
 .example__slider-buttons {
   width: min-content;
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: center;
   gap: 19px;
   margin: 0 auto;
   margin-top: 30px;
 
   @media (min-width: @tablet) {
-    margin-top: 19px;
+    margin-top: 15px;
   }
 
   @media (min-width: @desktop) {
@@ -302,12 +306,12 @@
 
   @media (min-width: @tablet) {
     width: auto;
-    height: 515px;
+    height: 520px;
   }
 
   &--before {
     @media (min-width: @tablet) {
-      width: 333px;
+      width: 339px;
       object-fit: cover;
       object-position: left;
       margin-right: 0;
@@ -320,7 +324,7 @@
 
   &--after {
     @media (min-width: @tablet) {
-      width: 295px;
+      width: 297px;
       object-fit: cover;
       object-position: right;
       margin-left: 0;
@@ -388,7 +392,7 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: -17px;
+  top: -15px;
   left: 50%;
   margin-left: -17px;
   width: 34px;
