--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -126,8 +126,8 @@
   margin: 29px auto 0 auto;
 
   @media (min-width: @tablet) {
-    width: 709px;
-    height: 609px;
+    width: 708px;
+    height: auto;
     margin-top: -81px;
   }
 
