--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -4,12 +4,14 @@
 
   @media (min-width: @tablet) {
     padding: @tablet-padding;
+    border-bottom: 1px solid @special-grey-4;
+    padding-bottom: 6px;
   }
 
   @media (min-width: @desktop) {
     width: @desktop-content;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
+    border-bottom: none;
   }
 }
 
