--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -101,7 +101,7 @@
     @media (min-width: @desktop) {
       width: 172px;
       height: auto;
-      margin-top: 5px;
+      margin-top: 2px;
     }
   }
 }
@@ -191,6 +191,13 @@
     color: @special-dark-grey;
     margin-bottom: 0;
     margin-top: auto;
+  }
+}
+
+.product-card__table-name {
+  @media (min-width: @desktop) {
+    position: relative;
+    left: 4px;
   }
 }
 
