programs__link, header__logo hover/active

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -76,11 +76,11 @@
   cursor: pointer;
 
   @media (min-width: @desktop) {
-    &:hover {
+    &:hover img {
       opacity: 0.8;
     }
 
-    &:active {
+    &:active img {
       opacity: 0.6;
     }
   }
