--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -106,6 +106,11 @@
   }
 }
 
+.product-card__link {
+  color: @special-dark-grey-2;
+  text-decoration: none;
+}
+
 .product-card__title {
   width: 80px;
   font-weight: 400;
