edits after 1 protection (map background size, last product cart hover)

--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -197,6 +197,12 @@
     margin-bottom: 0;
     margin-top: auto;
   }
+
+  @media (min-width: @desktop) {
+    &--last:hover {
+      background-color: @special-grey-2;
+    }
+  }
 }
 
 .product-card__table-name {
