--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -101,6 +101,7 @@
 
 .contacts__map-wrapper {
   background: url("../img/background-img/location-mobile.png") center center no-repeat;
+  background-size: 320px 362px;
 
   @media (min-resolution: 2dppx) {
     background: url("../img/background-img/location-mobile@2x.png") center center no-repeat;
@@ -136,9 +137,5 @@
 
   @media (min-width: @tablet) {
     height: 400px;
-  }
-
-  @media (min-width: @desktop) {
-    // margin-top: 86px;
   }
 }
